# fight-judge

./: .gitignore  LICENSE  METHODOLOGY.md  README.md  fix_annotations.py  main.py  pyproject.toml  run-inference-batch.py  visualize_pose.py  yolo-to-coco-bbox.py
annotations/: test_coco.json  train_coco.json  valid_coco.json
dataset/: README.md
dataset/mma-fighter-detection-dataset/: README.md  data.yaml
dataset/mma-fighter-pose-estimation-dataset/: LICENSE.txt  README.md  data.yaml
frontend/: index.html  index.js
mma-fighter-detection-dataset/: README.md
notes/: ActionRecognition.md  PoseEstimation.md
scripts/: extract-frames.py
scripts/data_preparation/: extract-frames.py  fix_annotations.py  yolo-to-coco-bbox.py
scripts/pose_estimation/: create-pose-dataset-from-object-detection.ipynb  run-inference-batch.py  visualize_pose.py
